# rustmate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config
.github/workflows/: benchmark.yml  foundry.yml  rust.yml  stylus.yml
benchmark/erc1155_benchmark/: .gas-snapshot  Cargo.toml  snapshot.py
benchmark/erc1155_benchmark/src/: lib.rs
benchmark/erc20_benchmark/: .gas-snapshot  Cargo.toml  snapshot.py
benchmark/erc20_benchmark/src/: lib.rs
benchmark/erc6909_benchmark/: .gas-snapshot  Cargo.toml  snapshot.py
benchmark/erc6909_benchmark/src/: lib.rs
benchmark/erc721_benchmark/: .gas-snapshot  Cargo.toml  snapshot.py
benchmark/erc721_benchmark/src/: lib.rs
rustmate/src/: lib.rs  owned.rs  weth.rs
src/: bytes32addresslib.rs  create3.rs  erc1155.rs  erc20.rs  erc4626.rs  erc6909.rs  erc721.rs  lib.rs  main.rs  owned.rs  owner.rs  weth.rs
src/auth/: auth.rs  mod.rs  owned.rs
src/mixins/: erc4626.rs  mod.rs
src/tokens/: erc1155.rs  erc20.rs  erc6909.rs  erc721.rs  mod.rs
src/utils/: bytes32address.rs  create3.rs  mod.rs
