[package]
name = "erc1155_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.4.1"
wee_alloc = "0.4.5"
rustmate = { path = "../../rustmate" }

[[bin]]
name = "erc20_benchmark"
path = "src/lib.rs"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]